# framedash-ue5-sdk

./: CHANGELOG.md  Framedash.uplugin  README.md  THIRD-PARTY-NOTICES.txt
Config/: FilterPlugin.ini
Samples/InEditorQuickstart/: FramedashQuickstartActor.cpp  FramedashQuickstartActor.h  README.md
Source/Framedash/: Framedash.Build.cs
Source/Framedash/Private/: Framedash.cpp  FramedashAddressPlanner.cpp  FramedashAddressPlanner.h  FramedashBatchPolicy.cpp  FramedashBatchPolicy.h  FramedashCameraMath.h  FramedashDirectSocketSender.cpp  FramedashDirectSocketSender.h  FramedashEndpointSecurity.cpp  FramedashEndpointSecurity.h  FramedashEngineCompat.h  FramedashEventBuffer.cpp  FramedashEventBuffer.h  FramedashFieldClamps.h  FramedashFlushPolicy.cpp  FramedashFlushPolicy.h  FramedashIoStats.h  FramedashIoTrackingPlatformFile.cpp  FramedashIoTrackingPlatformFile.h  FramedashMapLoadTimer.h  FramedashMemorySample.h  FramedashNanopb.cpp  FramedashPerformanceCollector.cpp  FramedashPerformanceCollector.h  FramedashPersistenceProvider.cpp  FramedashPersistenceProvider.h  FramedashProtobufSerializer.cpp  FramedashProtobufSerializer.h  FramedashRawHttp.cpp  FramedashRawHttp.h  FramedashRetryPolicy.cpp  FramedashRetryPolicy.h  FramedashSamplingPolicy.cpp  FramedashSamplingPolicy.h  FramedashSessionManager.cpp  FramedashSessionManager.h  FramedashSettings.cpp  FramedashStringUtil.h  FramedashSubsystem.cpp  FramedashTransport.cpp  (+3 more)
Source/Framedash/Public/: Framedash.h  FramedashSettings.h  FramedashSubsystem.h  FramedashTypes.h
Source/FramedashEditor/: FramedashEditor.Build.cs
Source/FramedashEditor/Private/: FramedashEditor.cpp  FramedashEditorEndpointSecurity.cpp  FramedashEditorEndpointSecurity.h  FramedashEditorHeatmapComponent.cpp  FramedashEditorHeatmapComponent.h  FramedashEditorHeatmapLayout.h  FramedashEditorHeatmapOverlay.cpp  FramedashEditorHeatmapOverlay.h  FramedashEditorHeatmapPanel.cpp  FramedashEditorHeatmapPanel.h  FramedashEditorHeatmapRenderData.cpp  FramedashEditorHeatmapRenderData.h  FramedashEditorHeatmapVisibility.cpp  FramedashEditorHeatmapVisibility.h  FramedashEditorHttpClient.cpp  FramedashEditorHttpClient.h  FramedashEditorLogic.cpp  (+2 more)
Tests/: AddressPlannerTests.cpp  BatchPolicyTests.cpp  CMakeLists.txt  CameraMathTests.cpp  EndpointSecurityTests.cpp  FlushPolicyTests.cpp  FramedashFieldClampsTests.cpp  FramedashIoStatsTests.cpp  FramedashMapLoadTimerTests.cpp  FramedashMemorySampleTests.cpp  ProtobufSerializerTests.cpp  README.md  RawHttpTests.cpp  RetryPolicyTests.cpp  UuidTests.cpp
Tests/HostProject/: FramedashHost.uproject
(+9 files in other folders)
